crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__ghost_lit_stalker_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "Discard",
        "count": {
          "type": "Fixed",
          "value": 2
        },
        "target": {
          "type": "Player"
        }
      },
      "declares_chosen_group": 2147483648,
      "cost": {
        "type": "Composite",
        "costs": [
          {
            "type": "Mana",
            "cost": {
              "type": "Cost",
              "shards": [
                "Black"
              ],
              "generic": 4
            }
          },
          {
            "type": "Tap"
          }
        ]
      },
      "sub_ability": null,
      "duration": null,
      "description": "{4}{B}, {T}: Target player discards two cards. Activate only as a sorcery.",
      "target_prompt": null,
      "activation_restrictions": [
        {
          "type": "AsSorcery"
        }
      ],
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "Discard",
        "count": {
          "type": "Fixed",
          "value": 4
        },
        "target": {
          "type": "Player"
        }
      },
      "declares_chosen_group": 2147483649,
      "cost": {
        "type": "Composite",
        "costs": [
          {
            "type": "Mana",
            "cost": {
              "type": "Cost",
              "shards": [
                "Black",
                "Black"
              ],
              "generic": 5
            }
          },
          {
            "type": "Discard",
            "count": {
              "type": "Fixed",
              "value": 1
            },
            "filter": null,
            "random": false,
            "self_ref": true
          }
        ]
      },
      "sub_ability": null,
      "duration": null,
      "description": "Channel — {5}{B}{B}, Discard this card: Target player discards four cards. Activate only as a sorcery.",
      "target_prompt": null,
      "activation_restrictions": [
        {
          "type": "AsSorcery"
        }
      ],
      "activation_zone": "Hand",
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false,
      "consumes_source": true
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
