crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__goblin_guide_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 5,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Haste"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "category": "Unknown",
            "fragment": "Haste",
            "description": "Haste"
          },
          "min_x_value": 0
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 6,
          "end_byte": 139,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Whenever ~ attacks, defending player reveals the top card of their library. If it's a land card, that player puts it into their hand."
      },
      "node": {
        "PreLoweredTrigger": {
          "mode": "Attacks",
          "execute": {
            "kind": "Spell",
            "effect": {
              "type": "RevealTop",
              "player": {
                "type": "DefendingPlayer"
              },
              "count": 1
            },
            "cost": null,
            "sub_ability": {
              "kind": "Spell",
              "effect": {
                "type": "ChangeZone",
                "origin": null,
                "destination": "Hand",
                "target": {
                  "type": "ParentTarget"
                },
                "owner_library": false,
                "enter_transformed": false,
                "enter_tapped": false,
                "enters_attacking": false
              },
              "cost": null,
              "sub_ability": null,
              "duration": null,
              "description": null,
              "target_prompt": null,
              "condition": {
                "type": "RevealedHasCardType",
                "card_types": [
                  "Land"
                ]
              },
              "optional_targeting": false,
              "optional": false,
              "forward_result": false,
              "sub_link": "SequentialSibling"
            },
            "duration": null,
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "valid_card": {
            "type": "SelfRef"
          },
          "origin": null,
          "destination": null,
          "trigger_zones": [
            "Battlefield"
          ],
          "phase": null,
          "optional": false,
          "damage_kind": "Any",
          "secondary": false,
          "valid_target": null,
          "valid_source": null,
          "description": "Whenever ~ attacks, defending player reveals the top card of their library. If it's a land card, that player puts it into their hand.",
          "constraint": null,
          "condition": null,
          "batched": false
        }
      }
    }
  ],
  "source_text": "Haste\nWhenever this creature attacks, defending player reveals the top card of their library. If it's a land card, that player puts it into their hand.",
  "card_name": "Goblin Guide"
}
